--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "npx tailwindcss -i ./src/input.css -o ./src/output.css --watch",
-    "build": "npx tailwindcss -i ./src/input.css -o ./src/output.css --minify"
+    "dev": "npx tailwindcss -i input.css -o output.css --watch",
+    "build": "npx tailwindcss -i input.css -o output.css --minify"
   },
-  "author": "",
+  "author": "TahaDaneshi",
   "license": "ISC",
   "devDependencies": {
     "tailwindcss": "^3.4.3"
